在IR方面实现了从零到一的巨大飞跃，目前可以实现无参数函数、各种类型返回语句、不带标识符的常量表达式的解析，并生成有效的LLVM IR，但是现在对于浮点数的表示和标准IR似乎还有差距，之后看看如果需要再改